# token_bridge

./: .gitignore  LEARNING_APPROACH.md  PROGRESS.md  README.md  SETUP.md  SOLANA_INFRASTRUCTURE.md  hardhat.config.ts  package-lock.json  package.json
.github/: Dockerfile.ci  anchor-build-README.md
.github/workflows/: build-ci-image.yml  integration.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  main.rs  types.rs  worker.rs
backend/src/executor/: ethereum.rs  solana.rs
backend/src/listener/: ethereum.rs  mod.rs  solana.rs
client/: .env.example  FRONTEND.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  vite-env.d.ts
client/src/constants/: tokens.ts
client/src/hooks/: useAuth.ts  useBridge.ts
client/src/providers/: index.tsx
client/src/services/: auth.ts  ethereum.ts  solana.ts
client/src/styles/: breakpoints.ts  global.ts  theme.ts
client/src/types/: index.ts
contracts/: BridgeToken.sol
contracts/ethereum/: Bridge.sol  BridgeQuotaNFT.sol  BridgeToken.sol  BridgeTokenFactory.sol  GasReserve.sol  QuotaSale.sol  RevenueVault.sol
contracts/ethereum/extension/: Admin.sol
contracts/ethereum/interface/: IBrigeToken.sol
contracts/solana/: Anchor.toml  Cargo.toml  package.json
contracts/solana/scripts/: setup-local.ts  test-bridge-receive.ts  trigger-sol-to-eth.ts
scripts/: deploy.ts  trigger-eth-to-sol.ts
server/: index.js  package-lock.json  package.json  testnet-token-bridge-firebase-adminsdk-uh5kr-138d6d92be.json
test/: Bridge.ts
(+37 files in other folders)
