[package]
name = "bridge-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
borsh = "1"

# Ethereum
alloy = { version = "0.9", features = ["full"] }

# Solana
solana-client = "2.1"
solana-sdk = "2.1"
spl-token = { version = "4", features = ["no-entrypoint"] }
